--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "motion-v": "^1.1.0-alpha.1",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "typeface-manrope": "^1.0.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
